--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 <div class="controls">
                     <button class="btn btn-quit" id="btn-quit-session">Quitter & retourner au menu</button>
                 </div>
+                <div class="controls">
+                    <button class="btn btn-secondary" id="btn-reset-deck">Réinitialiser ce deck</button>
+                    
+                    <button class="btn btn-quit" id="btn-quit-session">Quitter & retourner au menu</button>
+                </div>
             </div>
         </main>
         
