--- a/index.html
+++ b/index.html
@@ -27,6 +27,31 @@
                 <p>Choisissez un deck à étudier.</p>
                 <ul id="deck-tree">
                     </ul>
+                <details class="help-section">
+                    <summary>Guide des boutons et de l'interface 🧭</summary>
+                    <div>
+                        <h4>Boutons principaux</h4>
+                        <ul>
+                            <li><strong>🌙 / ☀️</strong> : Permet de basculer entre le thème clair et le thème sombre.</li>
+                        </ul>
+                
+                        <h4>Pendant une session d'étude</h4>
+                        <ul>
+                            <li><strong>La carte (Question)</strong> : Cliquez dessus pour la retourner et afficher la réponse.</li>
+                            <li><strong>À revoir (1)</strong> : Si vous ne connaissiez pas du tout la réponse. La carte vous sera représentée dans quelques minutes au sein de cette même session.</li>
+                            <li><strong>Difficile (2)</strong> : Si vous avez eu beaucoup de mal à trouver. La carte vous sera aussi représentée un peu plus tard dans la session.</li>
+                            <li><strong>Correct (3)</strong> : Si vous avez trouvé la réponse avec un peu d'hésitation. L'intervalle de révision sera modérément augmenté.</li>
+                            <li><strong>Facile (4)</strong> : Si la réponse était évidente. L'intervalle de révision sera fortement augmenté.</li>
+                            <li><strong>Réinitialiser ce deck</strong> : Efface toute votre progression (dates de révision, intervalles) pour le deck en cours. Utile si vous voulez recommencer l'apprentissage de zéro.</li>
+                            <li><strong>Quitter & retourner au menu</strong> : Met fin à la session en cours. Votre progression sur les cartes déjà vues est sauvegardée.</li>
+                        </ul>
+                
+                         <h4>Quand un deck est terminé</h4>
+                        <ul>
+                            <li><strong>Retourner à la bibliothèque</strong> : Vous ramène à l'écran d'accueil pour choisir un autre deck.</li>
+                        </ul>
+                    </div>
+                </details>
             </div>
             <div id="app-screen" class="hidden">
                 <div id="deck-info">
