--- a/index.html
+++ b/index.html
@@ -44,23 +44,44 @@
                 <details class="help-section">
                     <summary>Guide des boutons et de l'interface 🧭</summary>
                     <div>
-                        <h4>Boutons principaux</h4>
-                        <ul>
-                            <li><strong>🌙 / ☀️</strong> : Permet de basculer entre le thème clair et le thème sombre.</li>
-                        </ul>
                         <h4>Pendant une session d'étude</h4>
-                        <ul>
-                            <li><strong>La carte (Question)</strong> : Cliquez dessus pour la retourner et afficher la réponse.</li>
-                            <li><strong>À revoir (1)</strong> : Si vous ne connaissiez pas du tout la réponse. La carte vous sera représentée dans quelques minutes au sein de cette même session.</li>
-                            <li><strong>Difficile (2)</strong> : Si vous avez eu beaucoup de mal à trouver. La carte vous sera aussi représentée un peu plus tard dans la session.</li>
-                            <li><strong>Correct (3)</strong> : Si vous avez trouvé la réponse avec un peu d'hésitation. L'intervalle de révision sera modérément augmenté.</li>
-                            <li><strong>Facile (4)</strong> : Si la réponse était évidente. L'intervalle de révision sera fortement augmenté.</li>
-                            <li><strong>Réinitialiser ce deck</strong> : Efface toute votre progression pour le deck en cours.</li>
-                            <li><strong>Quitter & retourner au menu</strong> : Met fin à la session. Votre progression est sauvegardée.</li>
-                        </ul>
-                         <h4>Quand un deck est terminé</h4>
-                        <ul>
-                            <li><strong>Retourner à la bibliothèque</strong> : Vous ramène à l'écran d'accueil.</li>
+                        <ul class="guide-list">
+                            <li>
+                                <div class="guide-item">
+                                    <button class="btn" id="btn-again" disabled>À revoir (1)</button>
+                                    <span>: Si vous ne connaissiez pas la réponse. La carte reviendra dans quelques minutes.</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="guide-item">
+                                    <button class="btn" id="btn-hard" disabled>Difficile (2)</button>
+                                    <span>: Si vous avez eu beaucoup de mal. La carte reviendra aussi plus tard dans la session.</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="guide-item">
+                                    <button class="btn" id="btn-good" disabled>Correct (3)</button>
+                                    <span>: Si vous avez trouvé avec une légère hésitation.</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="guide-item">
+                                    <button class="btn" id="btn-easy" disabled>Facile (4)</button>
+                                    <span>: Si la réponse était évidente pour vous.</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="guide-item">
+                                    <button class="btn btn-secondary" disabled>Réinitialiser ce deck</button>
+                                    <span>: Efface toute votre progression pour le deck en cours.</span>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="guide-item">
+                                    <button class="btn btn-quit" disabled>Quitter & retourner au menu</button>
+                                    <span>: Met fin à la session (votre progression est sauvegardée).</span>
+                                </div>
+                            </li>
                         </ul>
                     </div>
                 </details>
