--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                             </li>
                             <li>
                                 <div class="guide-item">
-                                    <button class="btn btn-quit" disabled>Quitter & retourner au menu</button>
+                                     <button class="btn btn-quit" disabled>Sauver & retourner au menu</button>
                                     <span>: Met fin à la session (votre progression est sauvegardée).</span>
                                 </div>
                             </li>
