--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>Bravo ! Aucune carte à réviser pour aujourd'hui.</p>
                     </div>
                 
-                <div class="controls">
+                <div class="controls" id="controls-container">
                     <button class="btn btn-secondary" id="btn-reset-deck">Réinitialiser ce deck</button>
                     <button class="btn btn-quit" id="btn-quit-session">Sauver & retourner au menu</button>
                 </div>
