--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <main>
             <div id="welcome-screen">
                 <h2>Bibliothèque de Decks</h2>
+                <div class="filter-switch-container">
+                    <label for="deck-filter-switch">Afficher uniquement les decks à réviser</label>
+                    <label class="switch">
+                        <input type="checkbox" id="deck-filter-switch">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
                 <p>Choisissez un deck à étudier.</p>
             
                 <details class="help-section">
