--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                             <li>
                                 <div class="guide-item">
                                     <button class="btn" id="btn-again" disabled>À revoir (1)</button>
-                                    <span>: La carte reviendra dans quelques minutes, et sa prochaine révision sera programmée pour **demain**.</span>
+                                    <span>: **(Oublié !)** La carte revient dans un instant et son apprentissage **repart de zéro**.</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="guide-item">
                                     <button class="btn" id="btn-hard" disabled>Difficile (2)</button>
-                                    <span>: La carte reviendra plus tard dans cette session. Sa prochaine révision sera dans **1 jour**.</span>
+                                    <span>: **(C'était dur !)** La carte revient dans un instant et sa progression est simplement **ralentie**.</span>
                                 </div>
                             </li>
                             <li>
