--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 
                 <p>Choisissez un deck à étudier.</p>
             
-                <details class="help-section">
+               <details class="help-section">
                     <summary>Guide des boutons et de l'interface 🧭</summary>
                     <div>
                         <h4>Pendant une session d'étude</h4>
@@ -43,19 +43,19 @@
                             <li>
                                 <div class="guide-item">
                                     <button class="btn" id="btn-again" disabled>À revoir (1)</button>
-                                    <span>: **(Oublié !)** La carte revient dans un instant et son apprentissage **repart de zéro**.</span>
+                                    <span>: <strong>(Oublié !)</strong> La carte revient dans un instant et son apprentissage repart de zéro. Prochaine révision : <strong>dès le lendemain</strong>.</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="guide-item">
                                     <button class="btn" id="btn-hard" disabled>Difficile (2)</button>
-                                    <span>: **(C'était dur !)** La carte revient dans un instant et sa progression est simplement **ralentie**.</span>
+                                    <span>: <strong>(C'était dur !)</strong> La carte revient dans un instant et sa progression est ralentie. Prochaine révision : <strong>dès le lendemain</strong>.</span>
                                 </div>
                             </li>
                             <li>
                                 <div class="guide-item">
                                     <button class="btn" id="btn-good" disabled>Correct (3)</button>
-                                    <span>: Prochaine révision dans **quelques jours** (3 jours pour une nouvelle carte).</span>
+                                    <span>: Prochaine révision dans <strong>quelques jours</strong> (3 jours pour une nouvelle carte).</span>
                                 </div>
                             </li>
                             <li>
