Ajout du mélange des cartes et du retour visuel

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
     <div class="container">
         <header>
-            <h1>Flashcards SRS</h1>
+            <h1 id="app-title">Flashcards Maths974</h1>
             <button id="theme-toggle" title="Changer le thème">🌙</button>
         </header>
         <main>
             <div id="welcome-screen">
                 <h2>Bibliothèque de Decks</h2>
-                
+                <div id="error-container" class="error-message hidden"></div>
                 <div class="filter-switch-container">
                     <label for="deck-filter-switch">Afficher uniquement les decks à réviser</label>
                     <label class="switch">
